--- a/global.css
+++ b/global.css
@@ -3,7 +3,7 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-ul{
+ul,h1,p{
   margin: 0px;
   padding: 0px;
   list-style: none;
@@ -11,9 +11,17 @@ ul{
 
 a{
   text-decoration: none;
+  color: inherit;
+}
+
+img{
+  width: 100%;
 }
 
 :root{
+
+  --fonte-principal: "roboto", sans-serif;
+  --fonte-secundaria: "poppins", sans-serif;
 
   --w: #FFFFFF;
   --p1:#FFBFCB;
@@ -22,15 +30,8 @@ a{
   --p4:#804A57;
   --p5:#562330;
 
-  --c1:
-  --c2:
-  --c3:
-  --c4:
-  --c5:
-  --c6:
-  --c7:
-  --c8:
-  --c9:
+
+  --c4:#AEAEAE;
   --c10:#272727;
   --c10: #212121;
   --c11:#141414;
