--- a/style.css
+++ b/style.css
@@ -7,28 +7,29 @@
 .header{
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 30px;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   padding: 20px;
   max-width: 1200px;
-  margin-left: 0 auto;
-  margin-right: 0 auto;
+  margin-left: auto;
+  margin-right:auto;
 }
 
 .header-menu{
   display: flex;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 50px;
 }
 
 .header-menu a{
   display: inline-block;
   color: var(--w);
-  font-size: 18px;
+  font-size: 1.125rem;
   padding: 16px 0px;
   position: relative;
+  font-family: var(--fonte-principal);
 }
 
 .header-menu a:after{
@@ -44,6 +45,54 @@ transition: 0.3s;
 
 .header-menu a:hover:after{
   width: 100%;
+}
+
+.introducao-bg{
+  background: var(--c12);
+}
+
+.introducao{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  align-items: center;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.introducao-conteudo{
+align-items: center;
+}
+
+.introducao h1{
+  color: var(--w);
+  margin-bottom: 32px;
+  font-family: var(--fonte-secundaria);
+  font-weight:600;
+  font-size: 3.5rem;
+  line-height: 1.125;
+}
+
+.introducao p{
+  grid-column: 1;
+  color: var(--c4);
+  font-size: 1.1rem;
+  line-height: 1.5;
+  font-family: var(--fonte-principal);
+  margin-bottom: 32px;
+
+}
+
+.introducao a{
+  color: var(--c4);
+}
+
+.introducao img{
+  color: var(--c4);
 }
 
 @media(max-width:800px){
