--- a/style.css
+++ b/style.css
@@ -1,221 +1,5 @@
 @import url(./global.css/reset.css);
-@import url(./global.css/root.css);
-@import url(/global.css/header&introducao.css);
-
-.header-bg{
- background: var(--c12);
-}
-
-.header{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right:auto;
-}
-
-.header-menu{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 50px;
-}
-
-.header-menu a{
-  display: inline-block;
-  color: var(--w);
-  font-size: 1.125rem;
-  padding: 16px 0px;
-  position: relative;
-  font-family: var(--fonte-principal);
-}
-
-.header-menu a:after{
-display: block;
-content: "";
-height: 2px;
-width:0%;
-background: var(--w);
-margin-top: 5px;
-position: absolute;
-transition: 0.3s;
-}
-
-.header-menu a:hover:after{
-  width: 100%;
-}
-
-.introducao-bg{
-  background: var(--c12);
-}
-
-.introducao{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 0px;
-  align-items: center;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.introducao-conteudo{
-align-items: center;
-}
-
-.introducao h1{
-  color: var(--w);
-  margin-bottom: 32px;
-  font-family: var(--fonte-secundaria);
-  font-weight:600;
-  font-size: 3.5rem;
-  line-height: 1.125;
-}
-
-.introducao p{
-  grid-column: 1;
-  color: var(--c4);
-  font-size: 1.1rem;
-  line-height: 1.5;
-  font-family: var(--fonte-principal);
-  margin-bottom: 32px;
-
-}
-
-.introducao a{
-  display: inline-block;
-  color: var(--c12);
-  background: linear-gradient(#FFBFCB, #EAABB7 28%,#D598A4 58%);
-  border-radius: 5px;
-  padding: 12px 20px;
-  font-family: var(--fonte-secundaria);
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 1rem;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-.introducao a:hover{
-  background: linear-gradient(#FFBFCB, #F09EAE 28%,#D88596 58%);
-}
-
-.introducao img{
-  color: var(--c4);
-}
-
-.introducao span{
-  color: var(--p1);
-
-}
-@media (max-width: 1200px){
-  .introducao h1{
-    font-size: 3rem;
-  }
-
-  .introducao p{
-    font-size: 1rem;
-  }
-
-  .introducao a{
-    font-size: 0.9rem;
-  }
-}
-
-@media(max-width:1000px){
-  .introducao h1{
-    margin-bottom: 25px;
-  }
-
-  .introducao p{
-    margin-bottom: 25px;
-  }
-
-  introducao a{
-    font-size: 0.9rem;
-  }
-}
-
-@media(max-width:850px){
-  .header a:after{
-    display: none;
-  }
-  .introducao h1{
-    font-size: 2.7rem;
-  }
-
-  .introducao p{
-    font-size: 0.9rem;
-  }
-
-  .introducao a{
-    font-size: 0.7rem;
-  }
-}
-
-@media (max-width:700px){
-
-  .introducao-bg{
-    padding-top: 30px;
-  }
-
-  .introducao{
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-
-  .introducao h1{
-    font-size: 2.5rem;
-  }
-
-  .introducao p{
-    text-align: start;
-  }
-
-  .introducao img{
-    /* margin-left: -40px; */
-    margin-top: -30px;
-    margin-left: 30px;
-    width: 70%
-  }
-  br{
-    display: none;
-  }
-}
-
-@media (max-width: 560px ){
-  .header{
-    justify-content: center !important;
-    align-items: center;
-    /* text-align: center; */
-  }
-
-  .header-menu{
-    justify-content: center;
-    padding-top: 20px;
-  }
-  .header-menu a{
-    padding: 0px;
-  }
-
-  .introducao p{
-    text-align: center;
-  }
-}
-
-@media (max-width: 400px ){
-   .introducao img{
-    margin-top: -20px;
-    margin-left: 30px;
-    width: 70%
-  }
-}
-
-
+@import url(./global.css/cores.css);
+@import url(./global.css/utilitarios.css);
+@import url(/home.css/header&introducao.css);
 
