--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url(./global.css/reset.css);
 @import url(./global.css/cores.css);
+@import url(./global.css/tipografia.css);
 @import url(./global.css/utilitarios.css);
 @import url(/home.css/header&introducao.css);
+
 
