--- a/global.css/utilitarios.css
+++ b/global.css/utilitarios.css
@@ -14,3 +14,10 @@
 .botao:hover{
   background: linear-gradient(#FFBFCB, #F09EAE 28%,#D88596 58%);
 }
+
+@media (max-width: 550px ){
+  .botao{
+    font-size: 0.8rem;
+    padding: 10px 18px;
+  }
+}
