--- a/home.css/header&introducao.css
+++ b/home.css/header&introducao.css
@@ -23,10 +23,8 @@
  
  .header-menu a{
    display: inline-block;
-   font-size: 1.125rem;
    padding: 16px 0px;
    position: relative;
-   font-family: var(--fonte-principal);
  }
  
  .header-menu a:after{
@@ -67,34 +65,13 @@
  
  .introducao h1{
    margin-bottom: 32px;
-   font-family: var(--fonte-secundaria);
-   font-weight:600;
-   font-size: 3.5rem;
-   line-height: 1.125;
  }
  
  .introducao p{
    grid-column: 1;
-   font-size: 1.1rem;
-   line-height: 1.5;
-   font-family: var(--fonte-principal);
    margin-bottom: 32px;
- 
  }
  
- @media (max-width: 1200px){
-   .introducao h1{
-     font-size: 3rem;
-   }
- 
-   .introducao p{
-     font-size: 1rem;
-   }
- 
-   .introducao a{
-     font-size: 0.9rem;
-   }
- }
  
  @media(max-width:1000px){
    .introducao h1{
@@ -104,26 +81,11 @@
    .introducao p{
      margin-bottom: 25px;
    }
- 
-   introducao a{
-     font-size: 0.9rem;
-   }
  }
  
  @media(max-width:850px){
    .header a:after{
      display: none;
-   }
-   .introducao h1{
-     font-size: 2.7rem;
-   }
- 
-   .introducao p{
-     font-size: 0.9rem;
-   }
- 
-   .introducao a{
-     font-size: 0.7rem;
    }
  }
  
@@ -138,14 +100,10 @@
      text-align: center;
    }
  
-   .introducao h1{
-     font-size: 2.5rem;
-   }
- 
    .introducao p{
      text-align: start;
    }
- 
+
    .introducao img{
      /* margin-left: -40px; */
      margin-top: -30px;
@@ -157,17 +115,17 @@
    }
  }
  
- @media (max-width: 560px ){
+ @media (max-width: 537px ){
    .header{
-     justify-content: center !important;
+     justify-content: center;
      align-items: center;
      /* text-align: center; */
    }
  
    .header-menu{
      justify-content: center;
-     padding-top: 20px;
    }
+
    .header-menu a{
      padding: 0px;
    }
@@ -176,6 +134,12 @@
      text-align: center;
    }
  }
+
+ @media (max-width: 517px ){
+  .header-menu{
+    padding-top: 20px;
+  }
+ }
  
  @media (max-width: 400px ){
     .introducao img{
@@ -183,5 +147,4 @@
      margin-left: 30px;
      width: 70%
    }
- }
- 
+  }
