--- a/css/global.css/reset.css
+++ b/css/global.css/reset.css
@@ -3,7 +3,7 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-ul,h1,p{
+ul,h1,p,h2,h3,h4{
   margin: 0px;
   padding: 0px;
   list-style: none;
