--- a/css/global.css/tipografia.css
+++ b/css/global.css/tipografia.css
@@ -1,8 +1,8 @@
 :root{
   --fonte-principal: "roboto", sans-serif;
   --fonte-secundaria: "poppins", sans-serif;
-  --fonte-terciaria: "fira-mono", sans-serif;
-  --fonte-citacao: "source serif" sans-serif;
+  --fonte-terciaria: "Fira Mono", sans-serif;
+  --fonte-citacao: "Source Serif 4", sans-serif;
 }
 .font-1-xxl{
   font: 600 3.5rem/1.125 var(--fonte-secundaria);
