--- a/css/home.css/header&introducao.css
+++ b/css/home.css/header&introducao.css
@@ -107,6 +107,9 @@
 }
 
 @media (max-width: 537px) {
+  .introducao img {
+    display: none;
+  }
   .header {
     justify-content: center;
     align-items: center;
