--- a/css/global.css/reset.css
+++ b/css/global.css/reset.css
@@ -1,19 +1,24 @@
-body{
+body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-ul,h1,p,h2,h3,h4{
+ul,
+h1,
+p,
+h2,
+h3,
+h4 {
   margin: 0px;
   padding: 0px;
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
 
-img{
+img {
   width: 100%;
 }
