--- a/style.css
+++ b/style.css
@@ -5,3 +5,4 @@
 @import url(/css/home.css/header&introducao.css);
 @import url(./css/bicicletas/bicicletas-lista.css);
 @import url(./css/home.css/tecnologia.css);
+@import url(./css/home.css/parceiros.css);
