--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -10,7 +10,7 @@
 .relogios-lista ul {
   display: flex;
   gap: 40px;
-  padding: 0 20px 20px 20px;
+  padding: 0 20px 0px 20px;
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
@@ -21,10 +21,7 @@
   min-width: 250px;
   display: flex;
   gap: 40px;
-  padding: 0 20px;
-  max-width: 1400px;
-  margin-left: auto;
-  margin-right: auto;
+  /* padding: 10px; */
 }
 
 .relogios-lista img {
@@ -54,6 +51,7 @@
 
 .relogios-lista li span {
   padding-left: 20px;
+  padding-bottom: 0px;
 }
 
 @media (max-width: 800px) {
