--- a/css/global.css/tipografia.css
+++ b/css/global.css/tipografia.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap");
+
 :root {
   --fonte-principal: "roboto", sans-serif;
   --fonte-secundaria: "poppins", sans-serif;
   --fonte-terciaria: "Fira Mono", sans-serif;
-  --fonte-citacao: "Source Serif 4", sans-serif;
+  --fonte-citacao: "Merriweather", serif;
 }
 .font-1-xxl {
   font: 600 3.5rem/1.125 var(--fonte-secundaria);
@@ -68,6 +70,14 @@
   .font-1-m {
     font-size: 0.9rem;
   }
+
+  .font-1-xl {
+    font-size: 1.7rem;
+  }
+
+  .font-1-m-b {
+    font-size: 1.2rem;
+  }
 }
 
 @media (max-width: 900px) {
@@ -82,10 +92,18 @@
   .font-1-xl {
     font-size: 1.5rem;
   }
+
+  .font-1-m-b {
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 700px) {
   .font-1-xxl {
     font-size: 2.5rem;
+  }
+
+  .font-1-xl {
+    font-size: 1.4rem;
   }
 }
