--- a/style.css
+++ b/style.css
@@ -6,3 +6,4 @@
 @import url(./css/bicicletas/bicicletas-lista.css);
 @import url(./css/home.css/tecnologia.css);
 @import url(./css/home.css/parceiros.css);
+@import url(./css/home.css/depoimento.css);
