--- a/style.css
+++ b/style.css
@@ -7,3 +7,4 @@
 @import url(./css/home.css/tecnologia.css);
 @import url(./css/home.css/parceiros.css);
 @import url(./css/home.css/depoimento.css);
+@import url(./css/seguros/seguros.css);
