--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -33,12 +33,12 @@
 }
 
 .seguros-item ul {
-  grid-column: 1/2;
+  grid-column: 1/-1;
   margin-bottom: 32px;
 }
 
 .seguros-item li {
-  grid-column: 1/2;
+  /* grid-column: 1/-1; */
   align-items: center;
   position: relative;
 }
@@ -67,5 +67,15 @@
   .seguros {
     grid-template-columns: 1fr;
     justify-items: center;
+  }
+
+  .seguros-item {
+    padding: 50px 100px;
+  }
+}
+
+@media (max-width: 550px) {
+  .seguros-item {
+    padding: 32px 32px 32px 60px;
   }
 }
