--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -3,7 +3,7 @@
 }
 
 .seguros {
-  padding-top: 60px;
+  padding-top: 100px;
   padding-bottom: 60px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -67,5 +67,10 @@
   .seguros {
     grid-template-columns: 1fr;
     /* justify-items: center; */
+  }
+
+  .seguros {
+    padding-top: 50px;
+    padding-bottom: 60px;
   }
 }
