--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 @import url(./css/global.css/cores.css);
 @import url(./css/global.css/tipografia.css);
 @import url(./css/global.css/utilitarios.css);
-@import url(/css/home.css/header&introducao.css);
-@import url(./css/bicicletas/bicicletas-lista.css);
+@import url(/css/global.css/header&introducao.css);
+@import url(/css/relogios/relogios.css);
 @import url(./css/home.css/tecnologia.css);
 @import url(./css/home.css/parceiros.css);
 @import url(./css/home.css/depoimento.css);
 @import url(./css/seguros/seguros.css);
+@import url(/css/global.css/footer.css);
