--- a/css/global.css/footer.css
+++ b/css/global.css/footer.css
@@ -56,7 +56,7 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  .footer img {
+  .footer > img {
     display: none;
   }
 
@@ -78,5 +78,9 @@
 
   .footer li {
     margin-bottom: 10px;
+  }
+
+  .footer-redes {
+    justify-content: center;
   }
 }
