--- a/css/global.css/header&introducao.css
+++ b/css/global.css/header&introducao.css
@@ -46,6 +46,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  padding-bottom: 80px;
+}
+
+.introducao img {
+  width: 85%;
+  justify-self: flex-end;
+  align-self: center;
 }
 
 .introducao-conteudo {
@@ -96,11 +103,10 @@
   }
 
   .introducao img {
-    /* margin-left: -40px; */
-    margin-top: -30px;
-    margin-left: 30px;
     width: 70%;
+    justify-self: center;
   }
+
   br {
     display: none;
   }
@@ -145,13 +151,5 @@
 
   .introducao {
     padding-top: 15px;
-  }
-}
-
-@media (max-width: 400px) {
-  .introducao img {
-    margin-top: -20px;
-    margin-left: 30px;
-    width: 70%;
   }
 }
