--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -73,4 +73,14 @@
     padding-top: 50px;
     padding-bottom: 60px;
   }
+
+  .seguros h2 {
+    text-align: center;
+  }
+}
+
+@media (max-width: 650px) {
+  .seguros a {
+    justify-self: center;
+  }
 }
