--- a/style.css
+++ b/style.css
@@ -1,11 +1,35 @@
+/* reset */
 @import url(.//css/global.css/reset.css);
+
+/* cores */
 @import url(./css/global.css/cores.css);
+
+/* tipografia */
 @import url(./css/global.css/tipografia.css);
+
+/* utilitarios */
 @import url(./css/global.css/utilitarios.css);
+
+/* header e introducao */
 @import url(/css/global.css/header&introducao.css);
+
+/* relogios */
 @import url(/css/relogios/relogios.css);
+
+/* tecnologia */
 @import url(./css/home.css/tecnologia.css);
+
+/* parceiros */
 @import url(./css/home.css/parceiros.css);
+
+/* depoimento */
 @import url(./css/home.css/depoimento.css);
+
+/* seguros */
 @import url(./css/seguros/seguros.css);
+
+/* footer */
 @import url(/css/global.css/footer.css);
+
+/* termos */
+@import url(/css/termos/termos.css);
