--- a/css/global.css/footer.css
+++ b/css/global.css/footer.css
@@ -49,6 +49,7 @@
 @media (max-width: 750px) {
   .footer {
     grid-template-columns: 1fr 1fr;
+    justify-items: center;
   }
 
   .footer > img {
