--- a/css/relogios/relogios.css
+++ b/css/relogios/relogios.css
@@ -1,74 +1,89 @@
-.relogios-lista {
-  padding-top: 100px;
-  padding-bottom: 100px;
+.relogio-bg {
+  background: var(--c11);
 }
 
-.relogios-lista h2 {
-  margin-bottom: 40px;
-}
-
-.relogios-lista ul {
+.relogio {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 1fr 1fr;
   gap: 40px;
-  padding: 0 20px 0px 20px;
-  max-width: 1400px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow-x: auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.relogios-lista li {
-  min-width: 250px;
-  display: flex;
-  gap: 40px;
-  /* padding: 10px; */
+.relogio-conteudo {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-content: start;
+  /* align-items: center; */
 }
 
-.relogios-lista img {
-  margin-bottom: 16px;
-  border-radius: 8px;
+.relogio-conteudo p,
+.relogio-conteudo h2 {
+  grid-column: 1/-1;
 }
 
-.relogios-lista h3 {
-  margin-bottom: 8px;
+.relogio-conteudo h2 {
+  margin-bottom: 20px;
+}
+
+.relogio-conteudo p {
+  margin-bottom: 32px;
+}
+
+.relogio-conteudo li {
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
-.relogios-lista h3::before {
-  display: inline-block;
-  content: "";
-  background-color: var(--p1);
-  height: 8px;
-  width: 12px;
-  margin-right: 8px;
-  transition: width 0.2s;
+.relogio-conteudo li + li {
+  margin-top: 10px;
 }
 
-.relogios-lista a:hover h3::before {
-  width: 24px;
+.relogio-conteudo a {
+  place-self: end;
 }
 
-.relogios-lista li span {
-  padding-left: 20px;
-  padding-bottom: 0px;
-}
-
-@media (max-width: 800px) {
-  .relogios-lista {
-    padding-bottom: 50px;
-    padding-top: 50px;
+@media (max-width: 850px) {
+  .titulo {
+    text-align: center;
   }
 
-  .relogios-lista ul {
-    gap: 20px;
+  .relogio {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .relogios-img {
+    width: 80%;
+    justify-self: center;
   }
 }
 
-@media (max-width: 550px) {
-  .relogios-lista {
-    padding-bottom: 50px;
-    padding-top: 35px;
+@media (max-width: 600px) {
+  .relogios-img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .relogio-conteudo {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .relogio-conteudo ul {
+    margin-bottom: 20px;
+    justify-content: center;
+  }
+
+  .relogio-conteudo a {
+    place-self: center;
+  }
+
+  .relogio-conteudo p {
+    margin-bottom: 20px;
   }
 }
