--- a/css/global.css/utilitarios.css
+++ b/css/global.css/utilitarios.css
@@ -9,6 +9,7 @@
   text-transform: uppercase;
   font-size: 1rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .botao:hover {
