--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 /* relogios */
 @import url(/css/relogios/relogios-lista.css);
 @import url(/css/relogios/relogios.css);
+@import url(/css/relogios/relogios-about.css);
 
 /* home */
 @import url(./css/home.css/tecnologia.css);
