--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -1,18 +1,17 @@
 #contato {
-  background: var(--c1);
+  background: linear-gradient(var(--c11) 600px, var(--w) 0px);
 }
 
 .contato {
   display: grid;
   grid-template-columns: 5fr 7fr;
-  margin-top: 60px;
+  /* margin-top: 60px; */
 }
 
 .contato-dados,
 .contato-formulario {
   padding: 60px;
-  box-shadow: 0 1px 2px rgba (0, 0, 0, 0.1);
-  /* margin-bottom: 200px; */
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .contato-dados {
@@ -97,5 +96,15 @@
 
   .contato-meios a:nth-child(3) {
     margin-bottom: 32px;
+  }
+}
+
+@media (max-width: 600px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+
+  .form .col-2 {
+    grid-column: 1;
   }
 }
