--- a/css/global.css/utilitarios.css
+++ b/css/global.css/utilitarios.css
@@ -10,6 +10,8 @@
   font-size: 1rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   text-align: center;
+  border: none;
+  cursor: pointer;
 }
 
 .botao:hover {
