--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -1,5 +1,5 @@
 #contato {
-  background: linear-gradient(var(--c11) 600px, var(--w) 0px);
+  background: linear-gradient(var(--c11) 600px, var(--c1) 0px);
 }
 
 .contato {
@@ -71,6 +71,10 @@
   /* padding-left: 28px; */
 }
 
+.my-textarea {
+  line-height: 1.5;
+}
+
 @media (max-width: 800px) {
   .contato {
     grid-template-columns: 1fr;
@@ -86,6 +90,15 @@
     border-radius: 5px 5px 0 0;
   }
 
+  .contato-dados h2 {
+    grid-column: 1/-1;
+  }
+
+  .contato-redes {
+    display: flex;
+    gap: 25px;
+  }
+
   .contato-formulario {
     border-radius: 0 0 5px 5px;
   }
@@ -96,15 +109,5 @@
 
   .contato-meios a:nth-child(3) {
     margin-bottom: 32px;
-  }
-}
-
-@media (max-width: 600px) {
-  .form {
-    grid-template-columns: 1fr;
-  }
-
-  .form .col-2 {
-    grid-column: 1;
   }
 }
