--- a/css/global.css/formulario.css
+++ b/css/global.css/formulario.css
@@ -38,3 +38,13 @@
 .form .botao {
   justify-self: start;
 }
+
+@media (max-width: 600px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+
+  .form .col-2 {
+    grid-column: 1;
+  }
+}
