--- a/style.css
+++ b/style.css
@@ -27,3 +27,6 @@
 /* contato */
 @import url(/css/contato/contato.css);
 @import url(/css/contato/lojas.css);
+
+/* orcamento */
+@import url(/css/orcamento/orcamento.css);
